Agregar nueva asignación: Construcción de REST APIs con FastAPI, incluyendo estructura de archivos y código inicial.

--- a/config.json
+++ b/config.json
@@ -58,6 +58,20 @@
           "type": "csv"
         }
       ]
+    },
+    {
+      "id": "fastapi-rest-api",
+      "title": "Building REST APIs with FastAPI",
+      "description": "Build a basic REST API using the FastAPI framework to manage a list of tasks.",
+      "path": "assignments/fastapi-rest-api",
+      "dueDate": "2025-10-10",
+      "attachments": [
+        {
+          "name": "Starter Code",
+          "file": "starter-code.py",
+          "type": "python"
+        }
+      ]
     }
   ]
 }
